src/test/resources/purescript_examples/failing/DuplicateTypeVars.purs.psi
Purescript File
  PsiElement(whitespace)('-- @shouldFailWith DuplicateTypeArgument\n')
  PSProgramImpl(Program)
    PSModuleImpl(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PSModuleNameImpl(ModuleName)
        PSQualifiedImpl(Qualified)
          PsiElement(proper name)('Main')
        PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PSNamedBinderImpl(NamedBinder)
        <empty list>
      PSImportDeclarationImpl(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PSImportModuleNameImpl(ImportModuleName)
          PSQualifiedImpl(Qualified)
            PsiElement(proper name)('Prelude')
          PsiElement(whitespace)('\n\n')
      PSTypeSynonymDeclarationImpl(TypeSynonymDeclaration)
        PsiElement(type)('type')
        PsiElement(whitespace)(' ')
        PSTypeConstructorImpl(TypeConstructor)
          PsiElement(proper name)('Foo')
          PsiElement(whitespace)(' ')
        PSIdentifierImpl(GenericIdentifier)
          PsiElement(identifier)('a')
          PsiElement(whitespace)(' ')
        PSIdentifierImpl(GenericIdentifier)
          PsiElement(identifier)('a')
          PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PSTypeImpl(Type)
          PSTypeAtomImpl(TypeAtom)
            PSIdentifierImpl(GenericIdentifier)
              PsiElement(identifier)('a')
              PsiElement(whitespace)('\n')
